--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yezor-bot",
   "version": "2.0.0",
-  "description": "Bot de WhatsApp Yezor con IA multilenguaje y auto-mejora",
+  "description": "Bot de WhatsApp Yezor con IA, multilenguaje, auto-mejora y sistema JadiBot",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -15,21 +15,24 @@
     "ai",
     "yezor",
     "chatbot",
-    "multilanguage"
+    "multilanguage",
+    "jadibot",
+    "subbot"
   ],
-  "author": "Fernandl",
+  "author": "Yezor Team",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Fer280809/yezor-bot.git"
+    "url": "https://github.com/TU_USUARIO/yezor-bot.git"
   },
   "bugs": {
-    "url": "https://github.com/Fer280809/yezor-bot/issues"
+    "url": "https://github.com/TU_USUARIO/yezor-bot/issues"
   },
-  "homepage": "https://github.com/Fer280809/yezor-bot#readme",
+  "homepage": "https://github.com/TU_USUARIO/yezor-bot#readme",
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.8",
     "qrcode-terminal": "^0.12.0",
+    "qrcode": "^1.5.4",
     "pino": "^9.5.0",
     "node-fetch": "^2.7.0",
     "chalk": "^4.1.2",
